feat: emit individual w:r per DocxRun and add basedOn to heading styles